[package]
name = "bevy_channel_message"
version = "0.1.1"
edition = "2024"
authors = ["Rustunit <mail@rustunit.com>"]
categories = ["game-development"]
description = "Send events via a channels form anywhere (eg. c-ffi) to Bevy (buffered) messages."
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustunit/bevy_channel_message"
readme = "README.md"

[dependencies]
bevy = { version = "0.17", default-features = false }
crossbeam-channel = "0.5"
